--- a/code/style.css
+++ b/code/style.css
@@ -53,7 +53,7 @@ h1 {
 .big-news {
   display: flex;
   flex-direction: column;
-  margin: 30px 100px 30px 100px;
+  margin: 30px;
   padding: 20px;
   border: solid #F0F5F9;
 }
@@ -66,7 +66,7 @@ hr {
   height: 5px;
   border: none;
   background-color: rgb(59, 55, 55);
-  margin: 30px 100px 50px 100px;
+  margin: 30px;
 }
 
 .big-news a {
@@ -92,7 +92,7 @@ hr {
   font-size: 2rem;
   box-sizing: border-box;
   text-decoration: none;
-  margin: 30px 100px 30px 100px;
+  margin: 50px;
 }
 
 .top-projects:hover {
@@ -120,7 +120,7 @@ h4 {
   flex-direction: column;
   align-content: center;
   text-align: justify;
-  margin: 30px 100px 30px 100px;
+  margin: 30px;
 }
 
 .card {
@@ -295,6 +295,10 @@ footer a:hover {
     display: none;
   }
 
+  hr {
+    margin: 30px 50px 50px 50px;
+  }
+
   .navigation {
     justify-content: center;
   }
@@ -323,6 +327,7 @@ footer a:hover {
     grid-template-columns: 1fr 2fr;
     justify-items: start;
     grid-gap: 30px;
+    margin: 30px 50px 30px 50px;
   }
 
   .big-news-image {
@@ -334,11 +339,16 @@ footer a:hover {
     font-size: 100%;
   }
 
+  .top-news-text {
+    margin: 30px 100px 30px 50px;
+  }
+
   .news-cards {
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-items: start;
     grid-gap: 20px;
+    margin: 30px 50px 30px 50px;
   }
 
   .card {
@@ -351,12 +361,16 @@ footer a:hover {
 }
 
 @media (min-width: 1201px) {
-
+  hr {
+    margin: 30px 100px 50px 100px;
+  }
+  
   .big-news {
     display: grid;
     grid-template-columns: 1fr 2fr;
     justify-items: start;
     grid-gap: 30px;
+    margin: 30px 100px 30px 100px;
   }
 
   .big-news-text {
@@ -380,10 +394,15 @@ footer a:hover {
     margin-left: 0;
   }
 
+  .top-news-text {
+    margin: 30px 100px 30px 100px;
+  }
+
   .news-cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: start;
+    margin: 30px 100px 30px 100px;
   }
 
   .card {
