--- a/code/style.css
+++ b/code/style.css
@@ -1,11 +1,11 @@
-*{
-  margin: 0;
+body{
+  margin:0;
 }
 html {
   color: black;
   font-family: Helvetica, sans-serif, Arial,;
   font-size: 12px;
-  background-color: slategray
+  background-color: slategray;
   animation-name: example;
   animation-duration: 4s;
 }
@@ -14,7 +14,7 @@ html {
   width: 100px;
   height: 100px;
   position: sticky;
-  border-radius: 10px;
+  border-radius: 20px ;
   margin: 30px;
   box-shadow: 10px 5px 5px teal;
 
@@ -52,35 +52,32 @@ html {
   flex-direction: column;
   margin: 10px 20px;
   padding: 20px;
-/*  margin-right:10px;*/
-}
-.big-news-image{
-  width: 50%;
+  margin-right:10px;
+  text-align: center;
+
+  background-color: rgb(250, 250, 250);
+  align-items: left;
 }
 
-.big-news-text-block{
-  text-align: center;
-  margin: 20px;
-/*  flex-grow: 1;
-  justify-content: center;*/
+.big-news-image{
+  width: 95%;
+  
 }
+
+.big-news-text{
+  text-align: center;
+  margin: 5px;
+  flex-grow: 1;
+  justify-content: center;
+}
+
 .flex-box {
   display: flex;
   height: 50%;
   width: 50%;
 
 }
-/*.big-news {
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(250, 250, 250);
-  margin: 10px 20px;
-  padding: 5px;
-  text-align: right;
-  align-items: left;
-  grid-template-columns: repeat(2, 50%);
 
-}*/
 .big-news picture {
   max-width: 50%;
 }
@@ -103,16 +100,20 @@ html {
   height: 300px;
   width: 300px;
   flex-grow: 1;
+  padding: 10px;
   
-}
-.flex-child-blue {
+}/*
+.flex-child {
   margin: 15px;
   border: 2px solid #254e58;
   border-radius: 5px;
   height: 300px;
   width: 320px;
-}
+}*/
+.blue{
+  border: 2px solid #254e58;
 
+}
 .p{
   color: black;
   text-align: right;
@@ -120,31 +121,26 @@ html {
 @keyframes example {
   from {background-color: lightgray;}
   to {background-color: white;}
+}
 
-/* Hides navigation for mobile */
-@media (max-width:767px) {
+
+/*@media (max-width:767px) {
   #navigation-bar{
     display:none;
-  }
-/* Tablet and bigger becomes rows, grid 2 columns */
-@media (min-width:768px) {
-  header{
+  } {
+  .header{
     flex-direction: row;
     text-align: right;
   }
   .big-news{
     flex-direction: row;
   }
-  }
   .flex-parent{
     grid-template-columns: repeat(2, 1fr);
     gap: 0 20px;
   }
-}
-
-/* Desktop goes 4 grid columns*/
 @media (min-width:992px) {
   .flex-parent{
     grid-template-columns: repeat(4, 1fr);
   }
-}
+}*/
