--- a/code/style.css
+++ b/code/style.css
@@ -317,8 +317,7 @@ footer a:hover {
     display: flex;
   }
 
-  .left-links,
-  .right-links {
+  .left-links,.right-links {
     display: block;
   }
 
@@ -377,10 +376,9 @@ footer a:hover {
     margin: auto;
   }
 
-  /* this two selector just same as with the one int he tablet mode but if i don't set it the image  doesn't use the grid layout */
+  /* this two selector just same as with the one in the tablet mode but if i don't set it the image  doesn't use the grid layout */
 
-  .left-links,
-  .right-links {
+  .left-links, .right-links {
     display: block;
   }
 
