--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,7 @@
 html {
   background: #D9CAB3;
   color: black;
+  font-family: 'Besley', serif;
 }
 
 header {
@@ -48,7 +49,6 @@ margin-bottom: 50px;
   text-align: center;
   font-size: 40px;
   font-style: italic;
-  font-weight: 600;
   margin: 2% 0% 10% 0%;
 }
 
@@ -139,7 +139,6 @@ margin-bottom: 50px;
     text-align: center;
     font-size: 40px;
     font-style: italic;
-    font-weight: 600;
   }
   
   .main-photo {
@@ -155,6 +154,7 @@ margin-bottom: 50px;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-evenly;
+    align-items: baseline;
   }
   
   .card {
@@ -171,7 +171,7 @@ margin-bottom: 50px;
 
 @media (min-width: 1024px) {
   header {
-    display: flex;
+  display: flex;
   flex-direction: row;
   justify-content: space-around;
   height: 100px;
@@ -200,6 +200,7 @@ margin-bottom: 50px;
   .link {
     text-decoration: none;
     color: black;
+    font-weight: 600;
   }
   .intro {
     display: flex;
@@ -220,6 +221,7 @@ margin-bottom: 50px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: baseline;
   }
 
   .card {
