small cleanup of the code

--- a/code/style.css
+++ b/code/style.css
@@ -3,7 +3,7 @@ body {
   font-family: roboto, sans-serif;
   color: #E05297;
   
-  /* ------------------------- BACKGROUND GRADIENT -------------------------------- */
+  /* BACKGROUND GRADIENT */
   
   background: linear-gradient(80deg,
   #fcf1b3, 
@@ -15,7 +15,7 @@ body {
   #fad584
   );
 
-  /* ---------------------------- ANIMATION -------------------------------- */
+  /* ANIMATION */
 
   background-size: 600%;
   animation-name: gradient;
@@ -33,7 +33,7 @@ body {
 }
 
 
-/* ------------------------------ HEADER --------------------------------------- */
+/* HEADER */
 
 .millenial-header {
   font-size: 60px;
@@ -42,7 +42,7 @@ body {
 }
 
 
-/* ---------------------------- NAVIGATION BAR ---------------------------------- */
+/*  NAVIGATION BAR  */
 
 ul {
   font-family: roboto, sans-serif;
@@ -68,7 +68,7 @@ li a {
   text-decoration: none;
 }
 
-/* -------------------------- MAIN CONTENT (CONTAINER) -------------------------------- */
+/*  MAIN CONTENT (CONTAINER)  */
 
 .grid-container {
   color: #E05297;
@@ -79,7 +79,7 @@ li a {
   row-gap: 15px;
 }
 
-/* ---------------------------- NEWS (GRID ITEMS) -------------------------------- */
+/* NEWS (GRID ITEMS) */
 
 .grid-item, .grid-item-big {
   background-color: #FCEEF5;
@@ -93,7 +93,7 @@ li a {
   box-shadow:  0 0 1px 1px #E05297;
 }
 
-/* ------------------------- TEXTS -------------------------------------------------- */
+/* TEXTS */
 
 h1 {
   font-size: 20px;
@@ -112,7 +112,7 @@ p {
   display: inline-block;
 }
 
-/* ---------------------- LINKS -------------------------------------------------- */
+/* LINKS */
 
 a {
   color: #E36BAE;
@@ -125,7 +125,7 @@ a:hover {
   
 }
 
-/* -------------------- IMAGES -------------------------------------------- */
+/* IMAGES */
 
 img {
   border-radius: 2%;
@@ -136,7 +136,7 @@ img:hover {
     transform: scaleX(-1);
 }
 
-/* ---------------------------------- FOOTER ------------------------------------------- */
+/* FOOTER */
 
 .millenial-footer {
   color: #E05297;
