--- a/code/style.css
+++ b/code/style.css
@@ -1,58 +1,70 @@
 /* Variables for easy access color scheme */
-:root{
+:root {
   --bg-color: #899878;
   --txt-color: #121113;
-  --title-bg-color: #E4E6C3;
-  --box-bg-color: #F7F7F2;
+  --title-bg-color: #e4e6c3;
+  --box-bg-color: #f7f7f2;
   --nav-underline-color: #57d6a3;
+}
+
+@font-face {
+  font-family: Seagram;
+  src: url(./Seagram.ttf);
 }
 
 html {
   background: var(--bg-color);
   color: var(--txt-color);
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-a, a:visited {
+a,
+a:visited {
   text-decoration: none;
   color: var(--txt-color);
 }
 
 /* Content box properties */
-header, .big-news, .small-news-card{
+header,
+.big-news,
+.small-news-card,
+.footer {
   background-color: var(--box-bg-color);
   border-radius: 10px;
   padding: 20px;
-/* Polaroid(?) boxshadow */
-  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .5);
-  -moz-box-shadow: 0 4px 6px rgba(0,0,0,.5);
-  box-shadow: 0 4px 6px rgba(0,0,0,.5);
+  /* Polaroid(?) boxshadow */
+  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
 }
 
-header{
+header,
+.footer {
   margin: 20px 20px;
+  text-align: center;
 }
 
-.logo{
+.logo {
   max-block-size: 10vw;
   margin: 0 0 0 10px;
-  object-fit: cover; 
+  object-fit: cover;
 }
 
-.site-name{
-  font-size: 3vw;
-  margin: 0 0 0 10vw; 
+.site-name {
+  font-family: Seagram;
+  font-size: 5vw;
+  margin: 0 3vw 0 10vw;
+  white-space: nowrap;
 }
 
-nav{
-  display:flex;
-  justify-content: space-between;
+nav {
+  display: flex;
   align-items: center;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-size: 1.2vw;
 }
 
-.navigation ul li{
+.navigation ul li {
   list-style: none;
   display: inline-block;
   padding: 8px 12px;
@@ -60,54 +72,54 @@ nav{
 }
 
 /* Underline animation navigation links */
-.navigation ul li::after{
-  content:'';
+.navigation ul li::after {
+  content: "";
   width: 0%;
   height: 2px;
-  background:var(--nav-underline-color);
+  background: var(--nav-underline-color);
   display: block;
   margin: auto;
   transition: 0.5s;
 }
 
-.navigation ul li:hover::after{
+.navigation ul li:hover::after {
   width: 100%;
 }
 
 .big-news {
-  display:flex;
+  display: flex;
   flex-direction: column;
   margin: 10px 20px;
 }
 
-.big-news-picture{
-  display: block;
+.big-news-picture {
   margin: 0 auto;
   object-fit: contain;
   width: 100%;
   height: 400px;
 }
 
-.big-news-text-block{
+.big-news-text-block {
   text-align: center;
   margin: 20px;
 }
 
-.big-news-title, .small-news-title{
+.big-news-title,
+.small-news-title {
   background-color: var(--title-bg-color);
   display: block;
   padding: 10px;
   border-radius: 10px;
 }
 
-.small-news{
+.small-news {
   display: grid;
   justify-items: center;
 }
 
-.small-news-card{
+.small-news-card {
   margin: 10px 20px;
-  display:flex;
+  display: flex;
   flex-direction: column;
   max-width: 200px;
   text-align: center;
@@ -117,7 +129,7 @@ nav{
   transform: scale(1.05);
 }
 
-.small-news-picture{
+.small-news-picture {
   display: block;
   margin: 0 auto;
   object-fit: contain;
@@ -125,35 +137,42 @@ nav{
   height: 200px;
 }
 
-/* Hides navigation for mobile */
-@media (max-width:767px) {
-  #navigation-id{
-    display:none;
+footer {
+  font-size: 0.7rem;
+}
+
+.technigo-logo {
+  max-width: 50px;
+}
+
+/* Hides navigation links for mobile */
+@media (max-width: 767px) {
+  #navigation-id {
+    display: none;
   }
 }
 
 /* Tablet+> boxtexts becomes rows, grid 2 columns */
-@media (min-width:768px) {
-  header{
+@media (min-width: 768px) {
+  header {
     flex-direction: row;
     text-align: center;
   }
 
-  .big-news{
+  .big-news {
     flex-direction: row;
   }
-  .big-news-text-block{
+  .big-news-text-block {
     text-align: left;
   }
-  .small-news{
+  .small-news {
     grid-template-columns: repeat(2, 1fr);
-    gap: 0 20px;
   }
 }
 
 /* Desktop goes 4 grid columns*/
-@media (min-width:992px) {
-  .small-news{
+@media (min-width: 992px) {
+  .small-news {
     grid-template-columns: repeat(4, 1fr);
   }
 }
