cleaned up html & css files

--- a/code/style.css
+++ b/code/style.css
@@ -262,7 +262,6 @@ position: relative;
     margin: 0  0 110px 0;
   }
 
-
   h1 {
   font-size: 1.5rem;
   }
@@ -277,7 +276,6 @@ position: relative;
     font-size: 1.175rem;
     line-height: 1.5rem;
   }
-
     
   .navigation a {
     font-size: 1.125rem;
@@ -328,7 +326,6 @@ position: relative;
     height: 48px;
     width: auto;
   }
-
 
   .technigo-logo {
     width: 64px;
@@ -489,3 +486,4 @@ position: relative;
     transition-property: all;
     transition-duration: 0.4s;
   }
+}
