Changed text and added footer

--- a/code/style.css
+++ b/code/style.css
@@ -120,3 +120,11 @@ nav {
   }
 }
 
+footer {
+  display: flex;
+  text-align: center;
+  background-color: white;
+  padding: 10 px;
+  margin-top: 20px;
+
+}
