--- a/code/style.css
+++ b/code/style.css
@@ -31,7 +31,7 @@ header,
 .footer {
   background-color: var(--box-bg-color);
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
   /* Polaroid(?) boxshadow */
   -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
@@ -53,15 +53,8 @@ header,
 .site-name {
   font-family: Seagram;
   font-size: 5vw;
-  margin: 0 3vw 0 10vw;
+  margin: 0 3vw 0 8vw;
   white-space: nowrap;
-}
-
-nav {
-  display: flex;
-  align-items: center;
-  /* text-transform: uppercase; */
-  font-size: 1.2vw;
 }
 
 .navigation ul li {
@@ -106,7 +99,8 @@ nav {
 }
 
 .big-news-title,
-.small-news-title {
+.small-news-title,
+.read-more {
   background-color: var(--title-bg-color);
   display: block;
   padding: 10px;
@@ -183,5 +177,9 @@ footer {
 @media (min-width: 992px) {
   .small-news {
     grid-template-columns: repeat(4, 1fr);
+  }
+  nav {
+    display: flex;
+    align-items: center;
   }
 }
