--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,478 @@
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 html {
-  background: #0025ff;
-  color: #fff;
+  box-sizing: border-box;
+}
+
+/*********Styling of fonts and text*********/
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+h1 {
+  font-family: 'Rampart One', cursive;
+  color: white;
+  font-size: 2rem;
+  text-align: center;
+}
+
+h2 {
+  font-family: 'Amatic SC', cursive;
+  font-size: 1.5rem;
+}
+
+.big-news-text p {
+  color: white;
+}
+
+p {
+  font-family: 'Raleway', sans-serif;
+  color: black;
+  font-size: 17px;
+}
+
+/*********Styling of the header*********/
+
+.logo {
+  width: 100px;
+  height: 1rem;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #feffde;
+  height: 15rem;
+  width: 100%;
+  margin: 0;
+  border: solid #52734d;
+  padding: 2rem;
+}
+
+.hamburger {
+  display: flex;
+  height: 25px;
+  width: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 1rem;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: #52734d;
+}
+
+/*********navigation*********/
+
+.navigation {
+  display: inline-block;
+  align-items: baseline;
+}
+
+.navigation a {
+  display: none;
+  margin: 1rem;
+  padding: 10px;
+  text-transform: uppercase;
+  align-items: center;
+  background-color: #91c788;
+  border-radius: 40px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #feffde;
+  font-family: 'Amatic SC', cursive;
+  font-size: 2rem;
+  text-shadow: 1px 1px black;
+}
+
+.navigation a:hover {
+  background-color: #52734d;
+  transition: 0.2s;
+}
+
+/*********Styling of big-news*********/
+.body {
+  box-sizing: border-box;
+}
+
+.animation h1 {
+  color: white;
+  animation-name: example;
+  animation-duration: 6s;
+}
+
+@keyframes example {
+  from {
+    color: white;
+    color: #ddffbc;
+  }
+  to {
+    color: #fff3af;
+    color: #f9f871;
+    color: #ffc75f;
+    color: #f65c78;
+  }
+}
+
+.big-news {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #52734d;
+  padding: 1rem;
+}
+
+.big-news-picture {
+  max-width: 100%;
+  display: block;
+  margin-top: 1rem;
+  align-items: center;
+  padding: 4rem;
+}
+
+.big-news-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+  height: 300px;
+  width: 300px;
+  text-align: justify;
+  width: auto;
+  height: auto;
+  padding: 1rem;
+}
+
+/*********Styling of the small-news*********/
+
+.small-news {
+  display: grid;
+  grid-gap: 3px;
+  grid-template-columns: 1fr;
+  width: 100%;
+  height: 200%;
+}
+
+.veggie-kimchi {
+  height: 300px;
+  object-fit: contain;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 0 5px;
+  background-color: #ddffbc;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  border: #52734d solid;
+  box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.3);
+}
+
+.veggie-kimchi:hover {
+  background-image: url(./pickled-kimchi.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: 0.5s;
+  color: #ddffbc;
+  text-shadow: 2px 2px black;
+  font-weight: bold;
+  justify-content: flex-start;
+}
+
+.veggie-cucumber {
+  height: 300px;
+  object-fit: contain;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 0 5px;
+  background-color: #ddffbc;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  border: #52734d solid;
+  box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.3);
+}
+
+.veggie-cucumber:hover {
+  background-image: url(./pickled-cucumber.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: 0.5s;
+  color: #ddffbc;
+  text-shadow: 2px 2px black;
+  font-weight: bold;
+  justify-content: flex-start;
+}
+
+.veggie-sauerkraut {
+  height: 300px;
+  object-fit: contain;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 0 5px;
+  background-color: #ddffbc;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  border: #52734d solid;
+  box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.3);
+}
+
+.veggie-sauerkraut:hover {
+  background-image: url(./pickled-sauerkraut.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: 0.5s;
+  color: #ddffbc;
+  color: black;
+  font-weight: bold;
+  justify-content: flex-start;
+}
+
+.veggie-cauliflower {
+  height: 300px;
+  object-fit: contain;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 0 5px;
+  background-color: #ddffbc;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  border: #52734d solid;
+  box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.3);
+}
+
+.veggie-cauliflower:hover {
+  background-image: url(./pickled-cauliflower.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: 0.5s;
+  color: #ddffbc;
+  text-shadow: 2px 2px black;
+  font-weight: bold;
+  justify-content: flex-start;
+}
+
+.veggie-redonion {
+  height: 300px;
+  object-fit: contain;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 0 5px;
+  background-color: #ddffbc;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  border: #52734d solid;
+  box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.3);
+}
+
+.veggie-redonion:hover {
+  background-image: url(./pickled-redonion.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: 0.5s;
+  color: #ddffbc;
+  text-shadow: 2px 2px black;
+  font-weight: bold;
+  justify-content: flex-start;
+}
+
+.veggie-chilies {
+  height: 300px;
+  object-fit: contain;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 0 5px;
+  background-color: #ddffbc;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  border: #52734d solid;
+  box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.3);
+}
+
+.veggie-chilies:hover {
+  background-image: url(./pickled-chilies.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: 0.5s;
+  color: #ddffbc;
+  text-shadow: 2px 2px black;
+  font-weight: 900;
+  justify-content: flex-end;
+}
+
+.veggie-carrot {
+  height: 300px;
+  object-fit: contain;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  padding: 0 5px;
+  background-color: #ddffbc;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 25px;
+  border: #52734d solid;
+  box-shadow: 5px 5px 11px 0px rgba(0, 0, 0, 0.3);
+}
+
+.veggie-carrot:hover {
+  background-image: url(pickled-carrot.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  transition: 0.5s;
+  color: #ddffbc;
+  text-shadow: 2px 2px black;
+  font-weight: bold;
+  justify-content: flex-start;
+}
+
+.img {
+  width: 60%;
+  height: 60%;
+  display: block;
+}
+
+/*********Styling of footer*********/
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 2rem;
+  align-items: center;
+  height: 10rem;
+  width: 100%;
+  margin: 0.5rem;
+  border: solid black;
+  background-color: #52734d;
+}
+
+.footer-list li {
+  list-style-type: none;
+  font-family: monospace;
+  color: white;
+  font-weight: bold;
+  font-size: 0.8rem;
+  margin: 0.5rem;
+  text-align: left;
+}
+
+.footer-social {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  list-style-type: none;
+}
+
+.social-icon {
+  height: 1.4rem;
+  width: 1.4rem;
+  padding: 0.2rem;
+}
+
+/*********Media Queries*********/
+
+/* Tablet view */
+@media (min-width: 768px) {
+  .hamburger {
+    display: none;
+  }
+  header img {
+    display: inline-block;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+
+  .navigation a {
+    display: inline-block;
+    flex-grow: 4;
+  }
+  .big-news {
+    display: inline-block;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    flex-grow: 1;
+    width: 100%;
+  }
+
+  .big-news img {
+    float: left;
+    width: 55%;
+  }
+
+  .big-news-text {
+    padding: 2rem;
+    margin-top: 2rem;
+    height: auto;
+  }
+
+  p {
+    padding: 1rem;
+    margin: 1rem;
+    font-size: 1rem;
+    overflow: hidden;
+  }
+
+  .small-news {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .footer {
+    box-sizing: border-box;
+  }
+}
+
+/* Desk-topview */
+@media (min-width: 992px) {
+  body {
+    text-align: center;
+    justify-items: center;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+  p {
+    overflow: hidden;
+  }
+
+  .small-news {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: fit-content;
+  }
 }
