--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,482 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
+
+body {
+  box-sizing: border-box;
+  font-size: 62,5%;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Dancing Script', cursive;
+}
+
+a {
+color: #fff;
+text-decoration: none;
+}
+
+h1 {
+column-span: all;
+padding-bottom: 40px;
+}
+
+.header {
+background-color: #757575;
+box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+width: 100%;
+z-index: 3;
+}
+
+.header ul {
+margin: 0;
+padding: 0;
+list-style: none;
+overflow: hidden;
+background-color: #757575;
+}
+
+.header li a {
+display: block;
+padding: 20px 20px;
+border-right: 1px solid #f4f4f4;
+text-decoration: none;
+}
+
+.header li a:hover,
+.header .menu-btn:hover {
+background-color: #8CD790;
+}
+
+.header .logo {
+display: block;
+float: left;
+font-size: 2em;
+padding: 10px 20px;
+text-decoration: none;
+}
+
+.header .menu {
+clear: both;
+max-height: 0;
+transition: max-height .2s ease-out;
+font-family: 'Karla';
+}
+
+.header .menu-icon {
+cursor: pointer;
+display: inline-block;
+float: right;
+padding: 28px 20px;
+position: relative;
+user-select: none;
+}
+
+.header .menu-icon .navicon {
+background: #333;
+display: block;
+height: 2px;
+position: relative;
+transition: background .2s ease-out;
+width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+background: #333;
+content: '';
+display: block;
+height: 100%;
+position: absolute;
+transition: all .2s ease-out;
+width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+top: -5px;
+}
+
+.header .menu-btn {
+display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+top: 0;
+}
+
+.masonry {
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(43, 1fr);
+  row-gap: 1rem;
+  column-gap: 1rem;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 5px;
+  opacity:0.8;
+}
+
+@keyframes bounce {
+0%, 20%, 60%, 100% {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
+40% {
+  -webkit-transform: translateY(-10px);
+  transform: translateY(-10px);
+}
+
+80% {
+  -webkit-transform: translateY(-5px);
+  transform: translateY(-5px);
+}
+}
+
+img:hover{
+  opacity:1;
+  animation: bounce 1s;
+}
+
+.cell--1 {
+  grid-column: 1 / -1;
+  grid-row: 1 / 6;
+}
+
+
+.cell--2 {
+  grid-column: 1 / 3;
+  grid-row: 15 / 25;
+}
+
+.cell--3 {
+  grid-column: 3 / -1;
+  grid-row: 15 / 18;
+}
+
+.cell--4 {
+  grid-column: 1 / -1;
+  grid-row: 29 / 32;
+}
+
+.cell--5 {
+  grid-column: 1 / 3;
+  grid-row: 6 / 11;
+}
+
+.cell--6 {
+  grid-column: 3 / -1;
+  grid-row: 6 / 8;
+}
+
+.cell--7 {
+  grid-column: 3 / -1;
+  grid-row: 8 / 11;
+}
+
+.cell--8 {
+  grid-column: 1 / -1;
+  grid-row: 11 / 15;
+}
+
+.cell--9 {
+  grid-column: 1 / -1;
+  grid-row: 25 / 29;
+}
+
+.cell--10 {
+  grid-column: 3 / -1;
+  grid-row: 18 / 25;
+}
+
+.cell--11 {
+  grid-column: 1 / 2;
+  grid-row: 32 / 34;
+}
+
+.cell--12 {
+  grid-column: 2 / -1;
+  grid-row: 32 / 34;
+}
+
+.cell--13 {
+  grid-column: 1 / -1;
+  grid-row: 34 / 41;
+}
+
+.cell--14 {
+  grid-column: 1 / -1;
+  grid-row: 41 / -1;
+}
+
+
+.article {
+  text-align: center;
+  background-color: #77AF9C;
+  color: white;
+  padding: 50px;
+  font-family: 'Karla', sans-serif;
+}
+
+@media (min-width: 0px) {
+  .masonry {
+    height: 2000px;
+  }
+}
+
+@media  (min-width: 768px) and (max-width: 991px) {
+
+.article {
+  column-count: 2;
+  column-gap: 40px;
+  column-rule: 1px solid #f4f4f4;
+}
+
+  .masonry {
+      background-color: white;
+      width: 100vw;
+      height: 100vh;
+      padding: 1rem;
+      display: grid;
+      grid-template-columns: repeat(16, 1fr);
+      grid-template-rows: repeat(14, 1fr);
+      row-gap: 1rem;
+      column-gap: 1rem;
+  }
+
+  img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 5px;
+  }
+
+  .cell--1 {
+      grid-column: 1 / 6;
+      grid-row: 1 / 6;
+    }
+    
+    
+    .cell--2 {
+      grid-column: 6 / 9;
+      grid-row: 1 / 11;
+    }
+    
+    .cell--3 {
+      grid-column: 9 / 12;
+      grid-row: 1 / 4;
+    }
+    
+    .cell--4 {
+      grid-column: 12 / -1;
+      grid-row: 1 / 4;
+    }
+    
+    .cell--5 {
+      grid-column: 1 / 4;
+      grid-row: 6 / 11;
+    }
+    
+    .cell--6 {
+      grid-column: 4 / 6;
+      grid-row: 6 / 7;
+    }
+    
+    .cell--7 {
+      grid-column: 4 / 6;
+      grid-row: 7 / 11;
+    }
+    
+    .cell--8 {
+      grid-column: 1 / 6;
+      grid-row: 11 / -1;
+    }
+    
+    .cell--9 {
+      grid-column: 6 / 12;
+      grid-row: 11 / -1;
+    }
+    
+    .cell--10 {
+      grid-column: 9 / 12;
+      grid-row: 4 / 11;
+    }
+    
+    .cell--11 {
+      grid-column: 12 / 13;
+      grid-row: 4 / 6;
+    }
+    
+    .cell--12 {
+      grid-column: 13 / -1;
+      grid-row: 4 / 6;
+    }
+    
+    .cell--13 {
+      grid-column: 12 / -1;
+      grid-row: 6 / 13;
+    }
+    
+    .cell--14 {
+      grid-column: 12 / -1;
+      grid-row: 13 / -1;
+    }
+
+}
+
+@media  (min-width: 992px) {
+
+.article {
+  column-count: 3;
+  column-gap: 40px;
+  column-rule: 1px solid #f4f4f4;
+}
+
+.header li {
+  float: left;
+}
+.header li a {
+  padding: 20px 30px;
+}
+.header .menu {
+  clear: none;
+  float: right;
+  max-height: none;
+}
+.header .menu-icon {
+  display: none;
+}
+
+  .masonry {
+      background-color: white;
+      width: 100vw;
+      height: 100vh;
+      padding: 1rem;
+      display: grid;
+      grid-template-columns: repeat(16, 1fr);
+      grid-template-rows: repeat(14, 1fr);
+      row-gap: 1rem;
+      column-gap: 1rem;
+  }
+
+  img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 5px;
+  }
+
+  .cell--1 {
+      grid-column: 1 / 6;
+      grid-row: 1 / 6;
+    }
+    
+    
+    .cell--2 {
+      grid-column: 6 / 9;
+      grid-row: 1 / 11;
+    }
+    
+    .cell--3 {
+      grid-column: 9 / 12;
+      grid-row: 1 / 4;
+    }
+    
+    .cell--4 {
+      grid-column: 12 / -1;
+      grid-row: 1 / 4;
+    }
+    
+    .cell--5 {
+      grid-column: 1 / 4;
+      grid-row: 6 / 11;
+    }
+    
+    .cell--6 {
+      grid-column: 4 / 6;
+      grid-row: 6 / 7;
+    }
+    
+    .cell--7 {
+      grid-column: 4 / 6;
+      grid-row: 7 / 11;
+    }
+    
+    .cell--8 {
+      grid-column: 1 / 6;
+      grid-row: 11 / -1;
+    }
+    
+    .cell--9 {
+      grid-column: 6 / 12;
+      grid-row: 11 / -1;
+    }
+    
+    .cell--10 {
+      grid-column: 9 / 12;
+      grid-row: 4 / 11;
+    }
+    
+    .cell--11 {
+      grid-column: 12 / 13;
+      grid-row: 4 / 6;
+    }
+    
+    .cell--12 {
+      grid-column: 13 / -1;
+      grid-row: 4 / 6;
+    }
+    
+    .cell--13 {
+      grid-column: 12 / -1;
+      grid-row: 6 / 13;
+    }
+    
+    .cell--14 {
+      grid-column: 12 / -1;
+      grid-row: 13 / -1;
+    }
+}
+
+.footer {
+  font-family: 'Karla', cursive;
+  text-align: center;
+  height: 50px;
+  background-color: #757575;
+  color: white;
+  padding-top: 15px;
+}
+
