Logo text fixed

--- a/code/style.css
+++ b/code/style.css
@@ -28,6 +28,11 @@ h2{
   font-family: 'Carter One', cursive;
   font-size: 14px;
 }
+
+h1.title-text{
+  font-family: 'Carter One', cursive;
+  font-size: 30px;
+}
 .header{
   width: 100%;
   background-color: white;
